Fixed text contrast ratio

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -459,7 +459,7 @@ section {
   &__score-num {
     font-size: 24px;
     font-weight: 600;
-    color: var(--text-600);
+    color: var(--text-300);
     @media screen and (max-width: 768px) {
       font-size: 12px;
       margin-right: 8px;
